// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Duration should render duration in hours 1`] = `
<Duration
  value={3600001}
>
  1.00h
</Duration>
`;

exports[`Duration should render duration in minutes 1`] = `
<Duration
  value={60001}
>
  1.00m
</Duration>
`;

exports[`Duration should render duration in seconds 1`] = `
<Duration
  value={1001}
>
  1.00s
</Duration>
`;

exports[`Duration should render when not a number 1`] = `
<Duration
  value="not a number"
>
  not a number
</Duration>
`;
